--- a/vue/13-webpack 的使用/03-webpack 的loader/src/css/normal.css
+++ b/vue/13-webpack 的使用/03-webpack 的loader/src/css/normal.css
@@ -1,3 +1,5 @@
 body {
-    background-color: blue;
+    /* background-color: blue; */
+    /* background: url(../img/test01.jpg); */
+    background: url(../img/test02.jpg);
 }
